# moltbook-watcher

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
deploy/launchd/: com.moltbook.api.plist.example  com.moltbook.worker.plist.example
deploy/systemd/: moltbook-api.service.example  moltbook-worker.service.example
docs/: data-flow-and-safe-reset.md  ollama-and-threads-credentials.md  service-setup-run-test.md  systemd-launchd-runbook.md  telegram-setup.md
docs/plans/: 2026-02-24-moltbook-curation-design.md  2026-03-08-ingestion-time-parameter-design.md
scripts/: check_publish_queue.py  migrate.py  ops_cli.py  regenerate_drafts.py  reset_state.py
specs/001-moltbook-threads-bot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/api/: app.py  ops_routes.py  publish_routes.py  review_routes.py  telegram_routes.py
src/config/: settings.py
src/integrations/: moltbook_api_client.py  notification_client.py  telegram_client.py  threads_client.py
src/models/: base.py  candidate_post.py  follow_up_candidate.py  lifecycle.py  notification_event.py  publish_job.py  published_post_record.py  review_item.py  score_card.py
src/services/: audit_service.py  dedup_service.py  follow_up_service.py  logging_service.py  notification_service.py  publish_mode_service.py  publish_retry_policy.py  queue_client.py  review_payload_service.py  routing_service.py  scoring_service.py  telegram_reporting.py  (+1 more)
(+109 files in other folders)
